tests/baselines/reference/invalid-incomplete-groupname-3-u.errors.txt
invalid-incomplete-groupname-3-u.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
invalid-incomplete-groupname-3-u.ts(14,12): error TS1512: Expected a capturing group name.
invalid-incomplete-groupname-3-u.ts(14,14): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== invalid-incomplete-groupname-3-u.ts (3 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupName is `< RegExpIdentifierName >`.
    esid: prod-GroupName
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>.)\k<>/u;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
               
!!! error TS1512: Expected a capturing group name.
                 ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    